<resources>
    <string name="app_name">DemoProject</string>
    <string name="ok">Okay</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>

    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="fullname">Fullname</string>
    <string name="enter_fullname">Enter Fullname</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="no_record_found">No record found</string>
    <string name="new_update_available">Please update your application with a new version available.</string>
    <string name="No_internet_connection">No internet connection</string>
    <string name="session_expire_msg">Your session expire. Please login again.</string>

    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="tab3">Tab 3</string>
    <string name="tab4">Tab 4</string>

</resources>