<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ImageView
            android:layout_marginStart="20dp"
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/back_arrow" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tv_login"
            android:layout_below="@+id/iv_back">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">


                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/login" />

                <LinearLayout
                    android:id="@+id/ll_enter_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/sf_regular"
                        android:hint="@string/enter_email"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/text_16" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/fullname"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/sf_regular"
                        android:hint="@string/enter_fullname"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/text_16" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/sf_regular"
                        android:hint="@string/enter_address"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/text_16" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_enter_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/sf_regular"
                        android:hint="@string/enter_password"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/text_16" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_enter_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/sf_regular"
                        android:hint="@string/enter_confirm_password"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/text_16" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginEnd="20dp"

                    android:background="@drawable/roundedbg">

                    <TextView
                        android:id="@+id/btnSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:fontFamily="@font/sf_semibold"
                        android:gravity="center"
                        android:padding="18dp"
                        android:soundEffectsEnabled="true"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/extra_large_text" />
                </LinearLayout>


            </LinearLayout>


        </ScrollView>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:fontFamily="@font/sf_medium"
            android:padding="10dp"
            android:text="@string/back_to_login"
            android:textColor="@color/blue"
            android:textSize="16dp" />
    </RelativeLayout>
